code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_169.wast
(assert_malformed
  (module quote "(func block end $l)")
  "mismatching label"
)